Checked in 12/16/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -178,7 +178,7 @@
                                                                                      immediate="true" icon="fa fa-university Fs14 white"
                                                                                      action="#{tcmdash.doFundingAction}">
                                                                         <p:tooltip id="fundToolTipFade" for="fundButton"
-                                                                                   value="Edit Funding" />
+                                                                                   value="Edit Funding" position="left" />
                                                                         <f:setPropertyActionListener value="#{investment}"
                                                                                                      target="#{tcmdash.selectedAccount}" />
                                                                     </p:commandButton>
