Checked in 12/19/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -20,7 +20,7 @@
             <p:growl id="caddgrowl" showDetail="true" sticky="true" escape="true"/>
 
             <div class="layout-portlets-box">
-                <p:panel id="dPanel1" style="height:85px">
+                <p:panel id="dPanel1" style="height:85px; display: none;">
 
                     <div class="Container30 hide-mobile" style="margin-top: -5px">
                         <div class="ContainerIndent">
@@ -40,7 +40,7 @@
                         </div>
                     </div>
 
-                    <div class="Container30 hide-mobile"><!-- ROHIT's CHANGE -->
+                    <div class="Container30 hide-mobile">
                         <div class="ContainerIndent">
                             <div class="DispBlock">
                                 <div class="Fleft TexAlCenter">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="Container40 mb_contain"><!-- ROHIT's CHANGE -->
+                    <div class="Container40 mb_contain">
                         <div class="Wid50"></div>
                         <div class="ContainerIndent">
                             <div class="DispBlock">
