--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -107,7 +107,7 @@
                         <div class="Container50">
                             <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
                                 <div class="ContainerIndent">
-                                    <div class="Fs15 gray FontThemeRegular">Visitors</div>
+                                    <div class="Fs15 gray FontThemeRegular">Pending Accounts</div>
                                     <div class="EmptyBox10"></div>
                                     <div class="Fs30 red FontThemeLight">
                                         <h:outputText value="#{adashbean.salesInfo.get('Pending')}">
@@ -122,7 +122,7 @@
                     <div class="Container50">
                         <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
-                                <div class="Fs15 gray FontThemeRegular">Today</div>
+                                <div class="Fs15 gray FontThemeRegular">Visitors (Today)</div>
                                 <div class="EmptyBox10"></div>
                                 <div class="Fs30 orange FontThemeLight">
                                     <h:outputText value="#{adashbean.salesInfo.get('VisitorToday')}">
