Prashant Revised 12/23/2016 - Fixes from UAT testing

--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -365,7 +365,7 @@
                                             <p:inputText styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                                          value="#{tdcto.tdMasterData.acatDetails.fromFirmAddress}"
                                                          maxlength="90"
-                                                         placeholder="Physical Aaddress of Firm">
+                                                         placeholder="Physical Address of Firm">
                                             </p:inputText>
                                         </div>
                                         <div class="Container32 CustomWidthFA-Responsive" >
