--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -5,25 +5,13 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 Responsive50">
-        <p:panelGrid columns="2" layout="grid" styleClass="Container100 Responsive50"
+    <div class="Container100 Responsive100 uob_tabsInputBlock">
+        <p:panelGrid columns="2" layout="grid" styleClass="Container100 Responsive100"
                      style="border:0px !important; background:none;" class="FormContent">
-            <div class="Wid90">Portfolio name</div>
-            <p:inputText value="#{uobpb.portfolioName}" styleClass="Wid90">
-                <p:ajax listener="#{uobpb.onChange}"
-                        update=":ceForm:displayInfo"/>
-            </p:inputText>
 
-            <div class="Wid90">Account type</div>
-            <p:selectBooleanButton id="accountaxable" styleClass="Wid100"
-                                   value="#{uobpb.accountTaxable}" onLabel="Taxable"
-                                   offLabel="Non-taxable">
-                <p:ajax listener="#{uobpb.onTaxStrategy}"
-                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea, :ceForm:pTabView:basket"/>
-            </p:selectBooleanButton>
 
-            <div class="Wid90">Invest for</div>
-            <p:selectOneMenu id="basket" styleClass="Wid90"
+            <div class="Wid100 uobCoreLabel">Invest for</div>
+            <p:selectOneMenu id="basket" styleClass="Wid100 uob_selectDropdown"
                              value="#{uobpb.basket}" >
                 <p:ajax listener="#{uobpb.selectedActionBasket}"
                         update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
@@ -32,15 +20,15 @@
             </p:selectOneMenu>
 
 
-            <div class="Wid90">Your current age</div>
+            <div class="Wid100 uobCoreLabel">Your current age</div>
             <p:spinner id="age" value="#{uobpb.age}"
                        min="1" max="100" stepFactor="1">
                 <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
             </p:spinner>
 
-            <div class="Wid90">Initial investment</div>
-            <p:inputNumber id="initialInvestment" styleClass="Wid90"
+            <div class="Wid100 uobCoreLabel">Initial investment</div>
+            <p:inputNumber id="initialInvestment" styleClass="Wid100 uob_investAmount"
                             value="#{uobpb.initialInvestment}"
                             maxlength="11" decimalPlaces="0" symbol="$">
                 <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
