--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -5,46 +5,42 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-
-        <div class="Container100 Responsive50">
-            <div class="ContainerIndent">
-                <div class="EmptyBox5"></div>
-
-                <h:panelGrid columns="2" layout="grid" class="FormContent"
-                             style="border:0px !important; background:none;margin-bottom:10px" cellpadding="5">
-                    <div class="TexAlLeft Wid90">
-                        Salary/Wages (Yearly)<br/>
-                        <span style="font-size: small;">(Total Gross Income)</span>
+	<div class="Container100 Responsive100 uob_tabsInputBlock">
+                <p:panelGrid columns="2" layout="grid" class="FormContent"
+                            styleClass="Container100 Responsive100"
+                     style="border:0px !important; background:none;">
+                    <div class="TexAlLeft Wid100">
+                        <div>Salary/Wages (Yearly)</div>
+                        <div style="font-size: small;">(Total Gross Income)</div>
                     </div>
-                    <p:inputNumber value="#{uobpb.householdwages}" styleClass="Wid90"
+                    <p:inputNumber value="#{uobpb.householdwages}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{uobpb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
                     </p:inputNumber>
 
-                    <div class="TexAlLeft Wid90">
+                    <div class="Wid100">
                         Liquid Asset<br/>
                         <span style="font-size: small;">(Cash/Savings Account, etc.)</span>
                     </div>
-                    <p:inputNumber value="#{uobpb.moneymarket}" styleClass="Wid90"
+                    <p:inputNumber value="#{uobpb.moneymarket}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{uobpb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
                     </p:inputNumber>
-                    <h:outputText/>
-                    <h:outputText/>
+                    <!-- <h:outputText/>
+                    <h:outputText/> -->
 
-                    <div class="Wid90">
+                    <div class="Wid100">
                         Other Investments<br/>
                         <span style="font-size: small;">(Stocks, Bond, Retirement)</span>
                     </div>
-                    <p:inputNumber value="#{uobpb.investment}" styleClass="Wid90"
+                    <p:inputNumber value="#{uobpb.investment}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{uobpb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
                     </p:inputNumber>
 
-                </h:panelGrid>
-            </div>
+                </p:panelGrid>
         </div>
 </ui:composition>
