--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -197,7 +197,7 @@
                              style="width: 100%;">
                 <p:ajax listener="#{tcmpb.doProjectionChart}"
                         update=":ceForm:inputArea"/>
-                <f:selectItem itemLabel="Select Type" itemValue=""
+                <f:selectItem itemLabel="Select One" itemValue=""
                               noSelectionOption="true"/>
                 <f:selectItem itemLabel="Aggressive (Higher Risk)" itemValue="5"/>
                 <f:selectItem itemLabel="Moderately Aggressive" itemValue="4"/>
